--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 cache: bundler # caching to speed up dependency installation
 rvm:
-- 2.5
+- rvm --install --binary --fuzzy
 addons:
   apt:
     packages:
